[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"
regex = "1.3.9"
lazy_static = "1.4.0"
itertools = "0.9.0"